Fix spacing errors due to margin-block-start conflict

--- a/site/css/layouts.css
+++ b/site/css/layouts.css
@@ -299,6 +299,15 @@ header > .options {
   margin-top: 1rem;
 }
 
+* + h1,
+* + h2,
+* + h3,
+* + h4,
+* + h5,
+* + h6 {
+  margin-block-start: auto;
+}
+
 .flex > *,
 .grid > *,
 header > *,
